# spoily_bot

./: LICENSE  spoily-bot.cabal
app/: Main.hs
src/: SpoilyBot.hs
src/SpoilyBot/: Config.hs
