name:                spoily-bot
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/kirikaza/spoily-bot#readme
license:             BSD3
license-file:        LICENSE
author:              Kirill Kazakov
maintainer:          k@kirikaza.ru
copyright:           2016 Kirill Kazakov
category:            value
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SpoilyBot
                     , SpoilyBot.Config
  build-depends:       base >= 4.7 && < 5
                     , http-client
                     , http-client-tls
                     , servant-server
                     , telegram-api
                     , text
                     , transformers
                     , wai
                     , warp
  default-language:    Haskell2010

executable spoily-bot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , spoily-bot
  default-language:    Haskell2010

test-suite spoily-bot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , spoily-bot
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kirikaza/spoily-bot
